--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "angular-webstorage-service": "^1.0.2",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "ng2-order-pipe": "^0.1.5",
+    "ng2-search-filter": "^0.4.7",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -33,6 +35,7 @@
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.3.1",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
